--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-helmet": "^6.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.8"
+    "react-helmet-async": "^1.0.8",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
