--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-helmet": "^6.1.6",
+    "@vitejs/plugin-react": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.8",
-    "react-redux": "^8.0.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.1.5"
+    "react-redux": "^8.0.5",
+    "vite": "^4.3.3"
   },
   "browserslist": [
     ">0.2%",
