--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.8",
     "react-redux": "^8.0.5",
+    "styled-components": "^5.3.10",
     "vite": "^4.3.3"
   },
   "browserslist": [
