--- a/package.json
+++ b/package.json
@@ -9,17 +9,6 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/react-helmet": "^6.1.6",
-    "@vitejs/plugin-react": "^4.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.8",
-    "react-redux": "^8.0.5",
-    "styled-components": "^5.3.10",
-    "vite": "^4.3.3"
-  },
   "browserslist": [
     ">0.2%",
     "not dead"
@@ -34,6 +23,7 @@
     "projectType": "generated_static"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
@@ -41,7 +31,16 @@
     "@storybook/react": "^7.0.7",
     "@storybook/react-vite": "^7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react-helmet": "^6.1.6",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^4.0.0",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.5",
+    "storybook": "^7.0.7",
+    "styled-components": "^5.3.10",
+    "vite": "^4.3.3"
   }
 }
