--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
   "glitch": {
     "projectType": "generated_static"
   },
-  "devDependencies": {
+  "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.10"
+  },
+  "devDependencies": {
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
@@ -34,13 +42,8 @@
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^4.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-redux": "^8.0.5",
     "storybook": "^7.0.7",
-    "styled-components": "^5.3.10",
+    "typescript": "^5.0.4",
     "vite": "^4.3.3"
   }
 }
