--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
