--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build-storybook": "storybook build",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "prettier": "prettier --write .",
+    "prelint:fix": "npm run prettier",
+    "lint:fix": "eslint --fix ."
   },
   "browserslist": [
     ">0.2%",
@@ -53,11 +56,16 @@
     "@types/jest": "^29.5.1",
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^12.11.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.1",
+    "prettier": "2.8.8",
     "storybook": "^7.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
